# AlignmentProfiler

./: AlignmentChecker.ipynb  BDNF_10seqs.txt  LICENSE  README.md  pyproject.toml
src/: AlignmentChecker.ipynb
src/AlignmentProfiler/: AlignmentProfiler.py  AlignmentProfiler_Public.py
tests/: BDNF_10seqs.txt
