[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AlignmentProfiler"
version = "0.0.3"
authors = [
  { name="Alexander G Lucaci", email="aglucaci@gmail.com" },
]
description = "A package to get summary statistics and diagnostics for a multiple sequence alignment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aglucaci/AlignmentProfiler"
"Bug Tracker" = "https://github.com/aglucaci/AlignmentProfiler/issues"
